<resources>
    <string name="app_name">OfflineBudgetTracker</string>
    <string name="test_splash_text">Splash!!</string>
    <string name="app_title_splash_screen">Offline Budget Tracker</string>
    <string name="head_style">headStye</string>
    <string name="date_hint">Enter date</string>
    <string name="store_name_hint">Enter store name</string>
    <string name="product_name_hint">Enter product name</string>
    <string name="product_type_hint">Enter product type</string>
    <string name="price_hint">Enter price</string>
    <string name="save_text">Save</string>
    <string name="empty">Enter intomation</string>
    <string name="description_text">Plus Button Icon</string>
    <string name="update_text">Update</string>
    <string name="delete_text">Delete</string>
    <string name="storeNameButton">Store</string>
    <string name="product_name_serch_button">Product</string>
    <string name="date_search_button">Date</string>
    <string name="price_search_button">Price</string>
    <string name="store_name_query_banner">Store Name Query</string>
    <string name="stote_name_query_hint">Enter a store name</string>
    <string name="store_name_query_button_text">Query</string>
</resources>